# Discord-Linker-Frontend

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
src/discord_linker_frontend/: __main__.py
src/discord_linker_frontend/commands/: configure.py
src/discord_linker_frontend/database/: database.py
src/discord_linker_frontend/web/: websocket.py
